--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.0.31",
+  "version": "2.0.32",
   "tag": "v2-lts",
   "description": "Angular for typexs",
   "main": "index.js",
@@ -88,39 +88,39 @@
     "@popperjs/core": "2.11.4",
     "@schematics/angular": "v12-lts",
     "@testdeck/mocha": "0.2.0",
-    "@types/bcrypt": "5.0.0",
-    "@types/brace-expansion": "1.1.0",
-    "@types/chai": "4.2.18",
-    "@types/chai-as-promised": "7.1.4",
-    "@types/chai-spies": "1.0.3",
-    "@types/d3": "6.7.0",
-    "@types/event-stream": "3.3.34",
-    "@types/events": "3.0.0",
-    "@types/express": "4.17.12",
-    "@types/fs-extra": "9.0.11",
-    "@types/glob": "7.1.3",
-    "@types/got": "9.6.11",
-    "@types/gulp": "4.0.8",
-    "@types/gulp-bump": "2.8.1",
-    "@types/gulp-replace": "0.0.31",
-    "@types/gulp-sourcemaps": "0.0.34",
-    "@types/gulp-watch": "4.1.34",
-    "@types/jasmine": "3.7.6",
-    "@types/jquery": "3.5.14",
-    "@types/ldapjs": "2.2.2",
-    "@types/lodash": "4.14.180",
-    "@types/luxon": "1.26.5",
-    "@types/merge-stream": "1.1.2",
-    "@types/mocha": "8.2.2",
-    "@types/node": "17.0.23",
-    "@types/redis": "2.8.29",
-    "@types/sha1": "1.1.3",
-    "@types/supertest": "2.0.12",
-    "@types/through2": "2.0.36",
-    "@types/triple-beam": "1.3.2",
-    "@types/yargs": "17.0.10",
-    "@typescript-eslint/eslint-plugin": "5.16.0",
-    "@typescript-eslint/parser": "5.16.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/brace-expansion": "^1.1.0",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-spies": "^1.0.3",
+    "@types/d3": "^7.4.0",
+    "@types/event-stream": "^4.0.0",
+    "@types/events": "^3.0.0",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^7.2.0",
+    "@types/got": "^9.6.12",
+    "@types/gulp": "^4.0.9",
+    "@types/gulp-bump": "^2.8.2",
+    "@types/gulp-replace": "^1.1.0",
+    "@types/gulp-sourcemaps": "^0.0.35",
+    "@types/gulp-watch": "^4.1.35",
+    "@types/jasmine": "^4.0.3",
+    "@types/jquery": "^3.5.14",
+    "@types/ldapjs": "^2.2.3",
+    "@types/lodash": "^4.14.182",
+    "@types/luxon": "^3.0.0",
+    "@types/merge-stream": "^1.1.2",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.6",
+    "@types/redis": "^4.0.11",
+    "@types/sha1": "^1.1.3",
+    "@types/supertest": "^2.0.12",
+    "@types/through2": "^2.0.36",
+    "@types/triple-beam": "^1.3.2",
+    "@types/yargs": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "ag-grid-angular": "25.3.0",
     "ag-grid-community": "25.3.0",
     "ajv": "8.2.0",
@@ -138,11 +138,11 @@
     "cron-parser": "3.5.0",
     "d3": "6.7.0",
     "del": "6.0.0",
-    "eslint": "8.11.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jasmine": "4.1.3",
-    "eslint-plugin-mocha": "10.0.3",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint": "^8.20.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "4.17.3",
     "fs-extra": "8.1.0",
     "glob": "7.1.7",
@@ -184,14 +184,14 @@
     "sha1": "^1.1.1",
     "sinon": "11.1.1",
     "sinon-chai": "3.7.0",
-    "sqlite3": "5.0.2",
+    "sqlite3": "5.0.10",
     "std-mocks": "1.0.1",
     "supertest": "6.2.2",
     "through": "2.3.8",
-    "ts-node": "10.0.0",
-    "tslib": "2.3.0",
+    "ts-node": "10.9.1",
+    "tslib": "2.4.0",
     "typeorm": "0.2.34",
-    "typescript": "4.2.4",
+    "typescript": "4.3.5",
     "winston": "3.3.3",
     "yargonaut": "1.1.4",
     "zone.js": "0.11.5"
