--- a/package.json
+++ b/package.json
@@ -109,11 +109,11 @@
     "@types/jquery": "^3.5.14",
     "@types/ldapjs": "^2.2.3",
     "@types/lodash": "^4.14.182",
-    "@types/luxon": "^3.0.0",
+    "@types/luxon": "^2.4.0",
     "@types/merge-stream": "^1.1.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.6",
-    "@types/redis": "^4.0.11",
+    "@types/redis": "2.8.32",
     "@types/sha1": "^1.1.3",
     "@types/supertest": "^2.0.12",
     "@types/through2": "^2.0.36",
