--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run:
           name: Install npm wee
-          command: npm install
+          command: npm ci
 
       - run:
           name: Start container
