--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "clean": "npx lerna run clean && npx lerna clean -y ",
     "postinstall": "npx lerna link",
     "test": "npx lerna run test --concurrency=1",
-    "build": "npx lerna run build && npm run postbuild",
-    "postbuild": "node scripts/after-build.js",
+    "build": "npx lerna run build",
+    "fix-versions": "node scripts/fix-versions.js",
     "publish": "npx lerna publish from-package",
     "documentation": "npx antora --stacktrace generate --clean --fetch --log-level all --to-dir docs/build/site",
     "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml"
