--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build ldap image:
       --destination "${CI_REGISTRY_IMAGE}/ldap"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $JOB_NAME == "update image"'
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG =~ /^v/'
       changes:
         - .gitlab-ci.yml
         - services/ldap/**/*
@@ -112,3 +112,4 @@ test:
         - packages/*/test/**
         - packages/*/test/**/*
         - deployments/testing/**
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG =~ /^v/'
