--- a/package.json
+++ b/package.json
@@ -133,15 +133,16 @@
     "prismjs": "1.23.0",
     "redis": "~3.1.2",
     "routing-controllers": "0.9.0",
+    "rxjs": "~7.5.0",
+    "semver": "^7.6.3",
     "sha1": "1.1.1",
     "sqlite3": "5.0.10",
     "std-mocks": "1.0.1",
     "supertest": "6.2.2",
     "through": "2.3.8",
     "ts-node": "~10.9.2",
-    "typescript": "~4.6.4",
-    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "private": true,
