--- a/packages/auth/src/package.json
+++ b/packages/auth/src/package.json
@@ -27,7 +27,6 @@
     "@typexs/base": "2.3.1",
     "@typexs/entity": "2.3.1",
     "@typexs/forms": "2.3.1",
-    "@typexs/ng": "12.3.1",
     "@typexs/roles": "2.3.1",
     "@typexs/roles-api": "2.3.1",
     "bcrypt": "^5.0.0",
@@ -38,7 +37,7 @@
     "@typexs/testing": "2.3.1"
   },
   "peerDependencies": {
-    "@typexs/server": "^2.3.0-dev.0"
+    "@typexs/server": ">=2.3.0"
   },
   "typexs": {
     "name": "auth",
