--- a/packages/ng-theme-base/src/package.json
+++ b/packages/ng-theme-base/src/package.json
@@ -32,16 +32,17 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@fortawesome/fontawesome-free": "^6.0.0",
-    "@typexs/base": "^2.3.0",
+    "@fortawesome/fontawesome-free": "^5.0.0",
+    "@typexs/base": ">=2.3.0",
     "@typexs/base-ng": ">=13.0.0",
     "@typexs/forms-ng": ">=13.0.0",
     "@typexs/ng-router-menu": ">=13.0.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.0.0",
     "perfect-scrollbar": "^1.5.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.0.0",
     "@typexs/base": "^2.3.1",
     "@typexs/base-ng": "^13.0.0",
     "@typexs/forms-ng": "^13.0.0",
@@ -52,6 +53,14 @@
   },
   "publishConfig": {
     "tag": "v13-lts"
+  },
+  "exports": {
+    "./styles/theme-admin": {
+      "sass": "./scss/themes/admin/_styles.scss"
+    },
+    "./styles/theme-admin/variables": {
+      "sass": "./scss/themes/admin/_variables.scss"
+    }
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
