--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
@@ -97,7 +97,7 @@
     "class-validator": "0.12.2",
     "codecov": "3.8.3",
     "codelyzer": "6.0.2",
-    "conventional-changelog": "^6.0.0",
+    "conventional-changelog-cli": "^5.0.0",
     "cron-parser": "4.9.0",
     "d3": "6.7.0",
     "eslint": "~9.8.0",
