--- a/packages/app-auth/angular.json
+++ b/packages/app-auth/angular.json
@@ -15,7 +15,10 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "src/polyfills.ts"
+            ],
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
             ],
