--- a/package.json
+++ b/package.json
@@ -36,28 +36,30 @@
   ],
   "devDependencies": {
     "@allgemein/http": "~1.4.1",
-    "@angular-devkit/build-angular": "v17-lts",
-    "@angular-devkit/core": "v17-lts",
-    "@angular-devkit/schematics": "v17-lts",
-    "@angular-eslint/eslint-plugin": "~17.5.3",
-    "@angular-eslint/eslint-plugin-template": "~17.5.3",
-    "@angular/animations": "v17-lts",
-    "@angular/cli": "v17-lts",
-    "@angular/common": "v17-lts",
-    "@angular/compiler": "v17-lts",
-    "@angular/compiler-cli": "v17-lts",
-    "@angular/core": "v17-lts",
-    "@angular/forms": "v17-lts",
-    "@angular/language-service": "v17-lts",
-    "@angular/platform-browser": "v17-lts",
-    "@angular/platform-browser-dynamic": "v17-lts",
-    "@angular/router": "v17-lts",
+    "@angular-devkit/build-angular": "v18-lts",
+    "@angular-devkit/core": "v18-lts",
+    "@angular-devkit/schematics": "v18-lts",
+    "@angular-eslint/eslint-plugin": "^18.0.0",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0",
+    "@angular/animations": "v18-lts",
+    "@angular/cli": "v18-lts",
+    "@angular/common": "v18-lts",
+    "@angular/compiler": "v18-lts",
+    "@angular/compiler-cli": "v18-lts",
+    "@angular/core": "v18-lts",
+    "@angular/forms": "v18-lts",
+    "@angular/language-service": "v18-lts",
+    "@angular/platform-browser": "v18-lts",
+    "@angular/platform-browser-dynamic": "v18-lts",
+    "@angular/platform-server": "v18-lts",
+    "@angular/router": "v18-lts",
+    "@angular/ssr": "v18-lts",
     "@antora/cli": "~3.1.9",
     "@antora/lunr-extension": "~1.0.0-alpha.8",
     "@antora/site-generator-default": "~3.1.9",
     "@cezaryrk/minimatch": "3.0.4",
     "@popperjs/core": "~2.11.8",
-    "@schematics/angular": "v17-lts",
+    "@schematics/angular": "v18-lts",
     "@testdeck/mocha": "0.3.3",
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
@@ -70,7 +72,7 @@
     "@types/jasmine": "~5.1.5",
     "@types/luxon": "~2.4.0",
     "@types/mocha": "~9.1.1",
-    "@types/node": "ts5.2",
+    "@types/node": "ts5.5",
     "@types/sha1": "~1.1.5",
     "@types/supertest": "~6.0.2",
     "@types/through2": "~2.0.41",
@@ -94,7 +96,7 @@
     "eslint-plugin-jasmine": "~4.2.2",
     "eslint-plugin-mocha": "~10.5.0",
     "eslint-plugin-prettier": "~5.2.3",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "got": "version-11",
     "jasmine-core": "^5.2.0",
     "js-yaml": "4.1.0",
@@ -109,7 +111,7 @@
     "mocha": "11.1.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
-    "ng-packagr": "^17.0.0",
+    "ng-packagr": "^18.0.0",
     "nodemon": "~3.1.9",
     "nyc": "~17.1.0",
     "perfect-scrollbar": "1.5.1",
@@ -127,7 +129,7 @@
     "through": "2.3.8",
     "ts-node": "~10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.2"
   },
   "private": true,
   "typexs": {
