--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@types/express": "~4.17.14",
     "@types/glob": "~8.1.0",
     "@types/got": "~9.6.12",
-    "@types/jasmine": "~5.1.5",
+    "@types/jasmine": "^5.1.6",
     "@types/luxon": "~2.4.0",
     "@types/mocha": "~9.1.1",
     "@types/node": "ts5.5",
@@ -108,7 +108,7 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "lerna": "~8.1.8",
     "lodash": "~4.17.21",
-    "mocha": "11.1.0",
+    "mocha": "^11.1.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
     "ng-packagr": "^18.0.0",
@@ -123,7 +123,7 @@
     "routing-controllers": "0.10.4",
     "semver": "^7.6.3",
     "sha1": "1.1.1",
-    "sqlite3": "5.1.7",
+    "sqlite3": "~5.1.7",
     "std-mocks": "2.0.0",
     "supertest": "7.0.0",
     "through": "2.3.8",
@@ -136,6 +136,7 @@
     "name": "typexs"
   },
   "overrides": {
-    "rxjs": "~7.8.0"
+    "rxjs": "~7.8.0",
+    "chokidar": "4.0.1"
   }
 }
